--- a/src/formatandsavenetbeans/Bundle.properties
+++ b/src/formatandsavenetbeans/Bundle.properties
@@ -1,1 +1,7 @@
-OpenIDE-Module-Name=formatandsavenetbeans
+OpenIDE-Module-Display-Category=Editing
+OpenIDE-Module-Long-Description=\
+    Invokes actions like format, fix-import on saving.\n\n\
+    Setup: Map the action "Save with save actions" to STRG-S. \n\n\
+    Configuration: Use "Options -> Editor -> Save actions"\n\nCopyright: Code is based on "keymap options"-code from Netbeans IDE.
+OpenIDE-Module-Name=Save with save actions
+OpenIDE-Module-Short-Description=Invokes actions like format, fix-import on saving.
