[doc] format plugin description with richtext

--- a/src/formatandsavenetbeans/Bundle.properties
+++ b/src/formatandsavenetbeans/Bundle.properties
@@ -1,7 +1,8 @@
 OpenIDE-Module-Display-Category=Editing
 OpenIDE-Module-Long-Description=\
     Invokes actions like format, fix-import on saving.\n\n\
-    Setup: Map the action "Save with save actions" to STRG-S. \n\n\
-    Configuration: Use "Options -> Editor -> Save actions"\n\nCopyright: Code is based on "keymap options"-code from Netbeans IDE.
+    <p>\n<b>Setup:</b> Map the action "Save with save actions" to STRG-S. \n\
+    </p>\n\n<p>\n<b>Configuration:</b> Use "Options -> Editor -> Save actions"\n</p>\n<hr/>\n<p>\n<b>Copyright:</b> Code is based on "keymap options"-code from Netbeans IDE.\n\
+    </p>
 OpenIDE-Module-Name=Save with save actions
 OpenIDE-Module-Short-Description=Invokes actions like format, fix-import on saving.
