[internal] several restructurings

--- a/src/Bundle.properties
+++ b/src/Bundle.properties
@@ -2,7 +2,7 @@ OpenIDE-Module-Display-Category=Editing
 OpenIDE-Module-Long-Description=\
     Invokes actions like format, fix-import on saving.\n\n\
     <p>\n<b>Setup:</b> Map the action "Save with save actions" to STRG-S. \n\
-    </p>\n\n<p>\n<b>Configuration:</b> Use "Options -> Editor -> Save actions"\n</p>\n<hr/>\n<p>\n<b>Copyright:</b> Code is based on "keymap options"-code from Netbeans IDE.\n\
+    </p>\n\n<p>\n<b>Configuration:</b> Use "Options -> Editor -> Save actions"\n</p>\n<hr/>\n<p>\n<b>Copyright:</b> Code is based on code from Netbeans IDE Code is from <pre>netbeans-7.1-201112071828-src\\options.keymap\\src\\org\\netbeans\\modules\\options\\keymap\\ActionsSearchProvider.java</pre>.\n\
     </p>
 OpenIDE-Module-Name=Save with save actions
 OpenIDE-Module-Short-Description=Invokes actions like format, fix-import on saving.
