--- a/src/de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties
+++ b/src/de/markiewb/netbeans/plugin/savewithsaveactions/Bundle.properties
@@ -3,9 +3,10 @@ SaveactionsPanel.cbSave.text=Save
 SaveactionsPanel.cbFormat.text=&Format
 SaveactionsPanel.cbFixImports.text=F&ix imports
 SaveactionsPanel.labelNote1.text=Enable the wanted actions and map them to the corresponding "action names".
-SaveactionsPanel.labelNote2.text=Note: The action names can be found out by invoking "Windows->Others->Show all actions".
 SaveactionsPanel.txtFixImports.text=
 SaveactionsPanel.txtFormat.text=
 SaveactionsPanel.txtSave.text=
 SaveactionsPanel.btnResetToDefaults.text=&Reset to defaults
 SaveactionsPanel.jLabel1.text=Action names
+SaveactionsPanel.labelNote2.text=Note: The action names can be found out by invoking "Show &all actions". (Output window must be opened)
+SaveactionsPanel.btnShowAllActions.text=Show &all actions
