[dependency] rebase dependencies to nb70

--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -11,5 +11,5 @@ cluster.path=\
     ${nbplatform.active.dir}/profiler:\
     ${nbplatform.active.dir}/sqe:\
     ${nbplatform.active.dir}/websvccommon
-nbplatform.active=default
+nbplatform.active=nb70
 run.args.extra=-J-javaagent:d:/tools/jrebel/jrebel.jar
